Added new js file

--- a/ES6/html/index.html
+++ b/ES6/html/index.html
@@ -5,9 +5,12 @@
 	<title>Learning ES6</title>	
 </head>
 <body>
-	
+	<div id="container">
+		<div id="template"></div>
+	</div>
 	<!-- script src="../src/main.js" type="text/javascript"></script -->
 	<!-- script src="../src/classesAndInheritance.js" type="text/javascript"></script -->	
-	<script src="../src/templateLiterals.js" type="text/javascript"></script>
+	<!-- script src="../src/templateLiterals.js" type="text/javascript"></script -->
+	<script src="../src/NewString&NumberMethods.js" type="text/javascript"></script>
 </body>
 </html>
